Fixs for samsung dark mode

--- a/src/style_2.css
+++ b/src/style_2.css
@@ -9,6 +9,7 @@ html {
     font-family: app-font-family;
     font-weight: 200;
     scroll-behavior: smooth;
+    prefers-color-scheme: light !important;
 }
 
 body {
